[metadata]
name = roundworld
author = Angel Yanguas-Gil
author_email = ayg@anl.gov
version = 0.1.0
description = A pure Python open world 1st person pov environment
long_description = file: README.md
keywords = reinforcement learning, RL, open world, AI
license = MIT License
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:

install_requires=
    numpy

[options.packages.find]
where=src
